--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
     "@types/mongoose": "^5.11.96",
+    "@vercel/analytics": "^1.5.0",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.544.0",
     "mongodb": "^6.20.0",
