--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "seed": "tsx scripts/seed.ts"
+    "seed": "tsx scripts/seed.ts",
+    "migrate:add-region": "tsx scripts/migrate-add-region.ts"
   },
   "dependencies": {
     "@solana/wallet-adapter-base": "^0.9.27",
