--- a/.github/workflows/mongodb-backup.yml
+++ b/.github/workflows/mongodb-backup.yml
@@ -73,7 +73,7 @@ jobs:
             tar -xzf nexteacher-backup-${{ steps.date.outputs.date }}.tar.gz
             
             # Restore to MongoDB
-            mongorestore --uri="YOUR_MONGODB_URI" nexteacher/
+            mongorestore --uri="YOUR_MONGODB_URI" next-teacher/
             ```
           files: |
             nexteacher-backup-${{ steps.date.outputs.date }}.tar.gz
